--- a/OpenAPISample3D/.gitattributes
+++ b/OpenAPISample3D/.gitattributes
@@ -1,3 +1,3 @@
-*.unity -text merge=unityyamlmerge diff
-*.prefab -text merge=unityyamlmerge diff
-*.asset -text merge=unityyamlmerge diff
+*.unity -text merge=unity diff
+*.prefab -text merge=unity diff
+*.asset -text merge=unity diff
