--- a/OpenAPISample3D/.gitattributes
+++ b/OpenAPISample3D/.gitattributes
@@ -1,3 +1,3 @@
-*.unity -text merge=unity diff
-*.prefab -text merge=unity diff
-*.asset -text merge=unity diff
+*.unity merge=unity diff
+*.prefab merge=unity diff
+*.asset merge=unity diff
