attributes for Git playing nice with Unity

--- a/OpenAPISample3D/.gitattributes
+++ b/OpenAPISample3D/.gitattributes
@@ -1,3 +1,3 @@
-*.unity merge=unity diff
-*.prefab merge=unity diff
-*.asset merge=unity diff
+*.unity -text merge=unity diff
+*.prefab -text merge=unity diff
+*.asset -text merge=unity diff
