--- a/OpenAPISample/OpenAPISample/OpenAPISample.csproj
+++ b/OpenAPISample/OpenAPISample/OpenAPISample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,7 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="NSwag.AspNetCore" Version="13.4.2" />
+    <PackageReference Include="NSwag.MSBuild" Version="13.4.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="$(NSwagExe_Core31) aspnetcore2openapi /assembly:$(TargetPath) /output:$(TargetDir)autobuilt_swagger.json" />
+    <Copy SourceFiles="$(TargetDir)autobuilt_swagger.json" DestinationFiles="$(SolutionDir)\autobuilt_swagger.json" />
+  </Target>
 
 
 </Project>
