--- a/OpenAPISample/OpenAPISampleClientLib/OpenAPISampleClientLib.csproj
+++ b/OpenAPISample/OpenAPISampleClientLib/OpenAPISampleClientLib.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateCode>True</GenerateCode>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,5 +17,13 @@
 
   <Target Name="NSwag" BeforeTargets="PrepareForBuild" Condition="'$(GenerateCode)'=='True' ">
     <Exec Command="$(NSwagExe_Core31) run nswag.json /variables:Configuration=$(Configuration)" />
+  </Target>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <ItemGroup>
+      <_CopyItems Include="$(TargetDir)\*.*" />
+    </ItemGroup>
+    <MakeDir Directories="$(SolutionDir)\..\OpenAPISample3D\Assets\Plugins\weatherLib" />
+    <Copy SourceFiles="@(_CopyItems)" DestinationFolder="$(SolutionDir)\..\OpenAPISample3D\Assets\Plugins\weatherLib" />
   </Target>
 </Project>
